@@ -1,12 +1,21 @@
 
 Changelog for Structure Synth:
 -------------------------
+3  Apr 09 [MHC] Added new random number system. Now uses two independent Mersenne Twisters for generating random numbers: one for geometry and one for colors.
+[2h]
+
+1  Apr 09 [MHC] Added 'set colorpool' operator. Can be either: 'randomhue', 'randomrgb', 'greyscale'/'grayscale', 'image:001.png', or 'colorlist:orange,yellow,red'. Do not use spaces in color lists!
+[2h]
+
+30 Mar 09 [MHC] Added 'random color' operator.
+[1h]
+
 23 Mar 09 [MHC] Changed to Qt 4.5.0
-				Added close icon to tabs.
+[2h]			Added close icon to tabs.
 				Compiler settings: now global optimization, SSE2 instructions, fast fp-math. (much more responsive!)
 				
 18 Mar 09 [MHC] Fixed a bug where a recursive rule not producing objects could fill memory (making system very unresponsive)
-                Added export of background color to templates.
+[1h]            Added export of background color to templates.
                 Added templates by Neon22 and Groovelock to SVN.
 
 17 Feb 09 [MHC] Added 'blend {color} {strenght}' operator
